--- a/src/components/Navigation/Navigation.module.scss
+++ b/src/components/Navigation/Navigation.module.scss
@@ -2,16 +2,21 @@
 
 .root {
   position: absolute;
+  width: 100%;
   top: 1.25rem;
-  right: 1rem;
-  z-index: 10;
+  right: 0;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
+  overflow: hidden;
+  z-index: 10;
+  overflow-x: clip;
+  overflow-y: visible;
 }
 
 .slideNav {
-  position: absolute;
+  position: relative;
+  margin-right: 1rem;
   top: 0;
   right: -1rem;
   width: 6.5rem;
